@@ -1,3 +1,9 @@
+2007-06-18  Yevgen Muntyan  <muntyan@tamu.edu>
+
+	* gtksourceview/language-specs/java.lang: LGPL'ed.
+
+	* gtksourceview/Makefile.am: do not distribute gtksourcetypebuiltins.*,
+	like gtksourcemarshal.*.
 
 === gtksourceview 1.90.1 ===
 
@@ -7,7 +13,7 @@
 	* README:
 	* configure.ac:
 
-	GtkSourceView 1.90.0 released.
+	GtkSourceView 1.90.1 released.
 
 2007-06-18  Paolo Borelli  <pborelli@katamail.com>
 
